@@ -11,13 +11,18 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclIntDecls.h,v 1.59 2004/03/19 16:15:39 dkf Exp $
+ * RCS: @(#) $Id: tclIntDecls.h,v 1.60 2004/03/19 18:33:52 kennykb Exp $
  */
 
 #ifndef _TCLINTDECLS
 #define _TCLINTDECLS
 
 #include "tclPort.h"
+
+#ifdef BUILD_tcl
+#   undef TCL_STORAGE_CLASS
+#   define TCL_STORAGE_CLASS DLLEXPORT
+#endif /* BUILD_tcl */
 
 /*
  * WARNING: This file is automatically generated by the tools/genStubs.tcl
