@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclMain.c,v 1.22 2004/03/17 18:14:14 das Exp $
+ * RCS: @(#) $Id: tclMain.c,v 1.23 2004/03/19 18:33:52 kennykb Exp $
  */
 
 #include "tcl.h"
@@ -25,7 +25,7 @@
  * the Tcl source directory to make their own modified versions).
  */
 
-extern int		isatty _ANSI_ARGS_((int fd));
+extern DLLIMPORT int		isatty _ANSI_ARGS_((int fd));
 
 static Tcl_Obj *tclStartupScriptPath = NULL;
 static Tcl_Obj *tclStartupScriptEncoding = NULL;
